
305948    [390] ppc64: code generation for ShlD64 / ShrD64 asserts
306035    [390] s390x: Fix IR generation for LAAG and friends
306054    [390] s390x: Condition code computation for convert-to-int/logical

306098  s390x: alternate opcode form for convert to/from fixed
   FIXED, 2501/12935, but not yet closed
306310  3.8.0 release tarball missing some files
   FIXED 12964/12983.

306783  Mips unhandled syscall :  4025  /  4079  / 4182
   FIXED r12995.

307038  DWARF2 CFI reader: unhandled DW_OP_ opcode 0x8 (DW_OP_const1u et al)
        FIXED r13010

307101  sys_capget second argument can be NULL
        FIXED r13021
307103  sys_openat: If pathname is absolute, then dirfd is ignored.
        FIXED r13159
307103  sys_openat If pathname is absolute, then dirfd is ignored
        FIXED r13159

307106  amd64->IR: f0 0f c0 02 (lock xadd byte)
        == 308333
        FIXED r2581

307113  s390x: DFP support

307141  valgrind does't work in mips-linux system
        FIXED (no action on our part?  unclear)



307155    [390] filter_gdb should filter out syscall-template.S T_PSEUDO
307285  x86_amd64 feature test for avx in test suite is wrong
        FIXED, r13161

307290  memcheck overlap testcase needs memcpy version filter
        FIXED r13020

307463  Please add "&limit=0" to the "all open bugs" link
        FIXED

307465    [390] --show-possibly-lost=no should bring down the error count / exit code
307729  pkgconfig support broken valgrind.pc
        valt_load_address=@VALT_LOAD_ADDRESS@
        FIXED r13018

307828  SSE optimized wcscpy, wcscmp, wcsrchr and wcschr trigger
        uninitialised value and/or invalid read warnings
        FIXED r13162

307955  Building valgrind 3.7.0-r4 fails in Gentoo AMD64 when
        using clang instead of gcc
        FIXED (long since)

308321    [390] testsuite memcheck filter interferes with gdb_filter 
308341    [390] vgdb should report process exit (or fatal signal)